@@ -2,6 +2,9 @@ Version 1.3.8
  Updated:
   - gui_sudo missing in Ubuntu 18.04 [BUG-120];
 
+ Fixed:
+  - winetricks: Proxy settings are used even if proxy type set to 'none';
+
 Version 1.3.7
  Updated:
   - Wine stock icons to be organised through Q4Wine [BUG-117];
